[electron] Test codecs from ffmpeg
Electron's ffmpeg can bundle proprietary codecs, which we want to avoid
having.

This commit adds a native module that will be built and run on the
client where the `@theia/electron` package will be installed.

The program will link at runtime against Electron's ffmpeg shared
library and scan the available codecs, failing if a proprietary one is
found.

Signed-off-by: Paul Maréchal <paul.marechal@ericsson.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -95,7 +95,8 @@ before_install:
   - export PATH=$HOME/.yarn/bin:$PATH
 install:
   - THEIA_SKIP_NPM_PREPARE=1 yarn install
-  - travis_retry npx electron-h264-test
+  - npx electron-codecs-test
+  - npx electron-h264-test # obsolete?
   - yarn prepare
   - scripts/check_git_status.sh
 script:
