set default value of colorTheme and iconTheme preference
vscode python plugin will read workbench.colorTheme,
if not find it will use the default value of Default Light+
(https://github.com/microsoft/vscode-python/blob/2008c14f4ca7305ad6aaee436174fe24a5a6c283/src/client/datascience/webViewHost.ts#L175)
which will cause the mismatch of jupyter notebook and current theia theme colors.

BTW set the default value of workbench.iconTheme

Signed-off-by: tom-shan <swt0008411@163.com>

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -7,6 +7,8 @@
     "frontend": {
       "config": {
         "applicationName": "Theia Browser Example",
+        "defaultTheme": "dark",
+        "defaultIconTheme": "theia-file-icons",
         "preferences": {
           "files.enableTrash": false
         }
